--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,104 @@
+# Configuration files
 tmdb-config.json
 anilist-config.json
+
+# Dependencies
+node_modules/
+client/node_modules/
+package-lock.json
+client/package-lock.json
+
+# Build outputs
+client/dist/
+dist/
+build/
+release-build/
+*.zip
+*.tar.gz
+*.tgz
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.npm
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.env
+
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+.AppleDouble
+.LSOverride
+*.sublime-project
+*.sublime-workspace
+
+# OS files
+Thumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+._*
+
+# Testing
+coverage/
+.nyc_output/
+*.lcov
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Backup files
+*.bak
+*.backup
+*-backup.md
+*-old.*
+App_old.jsx
+
+# Release artifacts
+release.zip
+release.zip.sha256
+SHA256SUMS
+
+# Local development
+.cache/
+.parcel-cache/
+.vite/
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Misc
+*.orig
